--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "node src/index.js",
-    "test": "jest --runInBand"
+    "test": "jest --coverage"
   },
   "license": "MIT",
   "devDependencies": {
